-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta3
-
None
-
Clazy
-
-
6fdfbb516 (dev), 101094be3 (6.10)
We were able to compile and use Qt 6.10.0 Beta2 in our CI. Compiling Qt 6.10.0 Beta3 still works but when we use it to compile our application we run into error: non-POD static. This is an example:
../source/test/qt/ui/proxy/test_UiLoader.cpp:14:1: error: non-POD static (StaticUiPluginProxyPluginInstance (anonymous namespace)::staticUiPluginProxyInstance) [-Wclazy-non-pod-global-static] 14 | Q_IMPORT_PLUGIN(UiPluginProxy) | ^ ../libs/dist/include/QtCore/qplugin.h:202:13: note: expanded from macro 'Q_IMPORT_PLUGIN' 202 | Static##PLUGIN##PluginInstance static##PLUGIN##Instance; \ | ^ <scratch space>:11:1: note: expanded from here 11 | StaticUiPluginProxyPluginInstance | ^ 1 error generated.
- links to
For Gerrit Dashboard: QTBUG-139615 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
671828,3 | Q_IMPORT_PLUGIN: work around clazy warning | dev | qt/qtbase | Status: MERGED | +2 | 0 |
671888,2 | Q_IMPORT_PLUGIN: work around clazy warning | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |