non-pod-global-static: fix Q_IMPORT_PLUGIN detection for qt-6.10

Q_IMPORT_PLUGIN was changed in in Qt-6.10, causing non-pod-global-static
to fail, as we ended up matching an inner macro expansion.
We now walk up the expansion stack to detect Q_IMPORT_PLUGIN and
friends.

Compare: https://bugreports.qt.io/browse/QTBUG-139615